<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvAutor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="31dp"
        android:text="@string/autor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="42dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAutor">

        <RadioButton
            android:id="@+id/rbBytes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rbBytes" />

        <RadioButton
            android:id="@+id/rbKbytes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rbKbytes" />

        <RadioButton
            android:id="@+id/rbMbytes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rbMbytes" />

        <RadioButton
            android:id="@+id/rbGbytes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rbGbytes" />

        <RadioButton
            android:id="@+id/rbTbytes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rbTbytes" />
    </RadioGroup>

    <Button
        android:id="@+id/btnConverter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="51dp"
        android:text="@string/btnConverter"
        app:layout_constraintBottom_toTopOf="@+id/tvSaida"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/etValor"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="45dp"
        android:ems="10"
        android:hint="@string/etvalor"
        android:inputType="number"
        android:autofillHints="no"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <TextView
        android:id="@+id/tvSaida"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="104dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>